# weed-whacker

./: .gitignore  README.md  main.py  pyproject.toml  run.py
docs/: asset-system-guide.md  display-tuning-guide.md  ideas.md  packaging-deployment.md  spec-v1.md  sprite-creation-guide.md
weed_whacker/: __init__.py  config.py  main.py
weed_whacker/assets/: sprites.py
weed_whacker/assets/managers/: __init__.py  asset_manager.py  base_asset_manager.py  object_manager.py  player_manager.py  tile_manager.py  tool_manager.py  weed_manager.py
weed_whacker/src/: __init__.py  economy.py  game.py  game_manager.py  grid.py  player.py  ui.py
weed_whacker/src/constants/: colors.py
weed_whacker/src/game/: __init__.py  events.py  grid.py  player.py  tools.py  weeds.py
weed_whacker/src/render/: __init__.py  grid_renderer.py  player_renderer.py
weed_whacker/src/ui/: hud.py  inventory_ui.py
weed_whacker/src/ui/shared/: __init__.py  confirm_dialog.py  message_dialog.py  toast.py
