[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weed-whacker"
version = "0.1.0"
description = "A top-down, pixel-art, tile-based game built in Python using Pygame"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Hagen Fritz", email = "hfritz@example.com"},
]
keywords = ["game", "pygame", "pixel-art", "tile-based"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
weed-whacker = "weed_whacker.main:main"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["weed_whacker"]
